Fix side-bar size
-switch from grid to flexbox layout
-slightly change scrollbar style so that in-content scrollbars are more visible

--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,18 @@ body {
 
 .page-wrapper {
     width: 100%;
-    display: grid;
-    grid-template-columns: 300px auto;
-    /* gap : 15px; */
-    /* display: flex; */
+    display: flex;
+    flex-direction: row;
     background: #111111;
+}
+
+/* if no sidebar, expand to full screen */
+/* .page-wrapper:has(> main) {
+    display: block;
+} */
+
+main:only-child {
+    width: 100%;
 }
 
 main {
@@ -68,6 +75,7 @@ main {
     margin: 15px;
     padding: 15px;
     border-radius: 15px;
+    overflow-x: hidden;
 }
 
 .content-wrapper {
@@ -90,7 +98,8 @@ Note: Custom scrollbars are not supported in Firefox or in Edge, prior version 7
 
 /* width */
 ::-webkit-scrollbar {
-    margin-top: var(--menu-height);
+    /* margin-top: var(--menu-height); */
+    height: 10px;
     width: 10px;
     background: transparent;
 }
@@ -99,13 +108,14 @@ Note: Custom scrollbars are not supported in Firefox or in Edge, prior version 7
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
-    margin-top: var(--menu-height);
+    /* margin-top: var(--menu-height); */
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: var(--bg-color-lightteal);
     border-radius: 10px;
+    border: 1px solid var(--bg-color-teal);
 }
 
 /* Handle on hover */
@@ -346,7 +356,8 @@ Side menu styling:
 
 aside {
     overflow-y: auto;
-    /* min-width: 300px; */
+    width: 200px;
+    min-width: 200px;
 }
 
 .aside-content {
